新しい問題へ遷移できるようになった
