# documents/generated-src/openapi-bundled.yaml
@@ -135,6 +135,38 @@ paths:
           $ref: '#/components/responses/errorResponse'
         '500':
           $ref: '#/components/responses/errorResponse'
+  /rooms/{room_id}/questions/next:
+    get:
+      tags:
+        - Room
+      sumamry: 次の問題の問題ID取得
+      description: |
+        ルームIDから、そのルーム内で未回答の問題を取得します。
+
+        - 問題ID
+        を返します。
+
+        未回答の問題が存在しない場合は404を返します。
+      operationId: getNewQuestionId
+      parameters:
+        - name: room_id
+          description: パスパラメータ内のroom_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          $ref: '#/components/responses/getNewQuestionIdResponse'
+        '400':
+          $ref: '#/components/responses/errorResponse'
+        '401':
+          $ref: '#/components/responses/errorResponse'
+        '404':
+          $ref: '#/components/responses/errorResponse'
+        '500':
+          $ref: '#/components/responses/errorResponse'
 components:
   requestBodies:
     Qprompt:
@@ -160,6 +192,8 @@ components:
       $ref: '#/components/responses/getRoomResponse'
     GetQuestionsByRoomIdResponse:
       $ref: '#/components/responses/getQuestionsByRoomIdResponse'
+    GetNewQuestionIdResponse:
+      $ref: '#/components/responses/getNewQuestionIdResponse'
     getQuestionResponse:
       description: 問題を取得しました。
       content:
@@ -290,6 +324,19 @@ components:
                 summary:
                   type: string
                   description: 問題要約
+    getNewQuestionIdResponse:
+      description: 新しい問題を取得しました。
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - question_id
+            properties:
+              question_id:
+                type: string
+                description: Question ID
+                format: uuid
   headers:
     Location:
       $ref: '#/components/headers/location'
